src/features/quick_tags/options/index.css
html {
  overflow-y: hidden;
  scrollbar-width: thin;
}

body {
  padding-block: var(--space-small);
  padding-inline: var(--space-medium);

  -webkit-user-select: none;
  user-select: none;
}

section,
fieldset {
  margin-block-start: var(--space-large);
}

input + label {
  margin-block-start: var(--space-small);
}

#bundles {
  --border-width: 1px;

  display: flex;
  flex-direction: column;
  row-gap: var(--border-width);
  padding: 0;
  border-radius: var(--border-radius-medium);
  margin: 0;
  overflow: hidden;

  background-color: var(--border-color);
  list-style-type: none;
  outline: var(--border-width) solid var(--border-color);
  outline-offset: 0;
}

#bundles:empty::before {
  content: "No tag bundles are defined.";
}

h3 + #bundles {
  margin-block-start: var(--space-medium);
}

.bundle {
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  align-items: center;
  column-gap: var(--space-small);
  padding: var(--space-medium);
  margin: 0;

  background-color: var(--background-color-canvas);
}

.bundle.sortable-ghost {
  opacity: 0%;
}

.bundle.sortable-fallback {
  border-radius: inherit;
  opacity: 100% !important;
}

.bundle button:has(> i) {
  padding: var(--space-xsmall);
  border: none;

  background: none;
  cursor: pointer;
}

.bundle button i {
  color: var(--text-color);
  font-size: 21px;
}

.bundle .drag-handle {
  background-color: transparent !important;
  cursor: grab;
}

.bundle .drag-handle:active {
  cursor: grabbing;
}

.bundle .text-content {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: flex-start;
  row-gap: var(--space-xsmall);
}

.bundle .description {
  color: var(--text-color-deemphasized);
  font-size: var(--font-size-small);
}

.bundle .actions {
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  align-items: center;
  column-gap: var(--space-xsmall);
  margin-left: auto;
}

